# crate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CRATE_architecture.md  Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
apps/desktop/: package.json
apps/desktop/scripts/: bundle-backend.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/web/: dev.cjs  dev.mjs  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  providers.tsx
apps/web/app/callback/: page.tsx
apps/web/app/discover/: page.tsx
apps/web/app/queue/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/taste/: page.tsx
apps/web/src/components/: sidebar.tsx  tab-bar.tsx
apps/web/src/components/discover/: CrateLoader.tsx  DiscoverView.tsx  FilterRow.tsx  TasteBanner.tsx  TrackCard.tsx
apps/web/src/components/filter-chips/: filter-chips.tsx
apps/web/src/components/icons/: CrateIcon.tsx
apps/web/src/components/layout/: AppShell.tsx  TabBar.tsx  Topbar.tsx
apps/web/src/components/library-grid/: library-grid.tsx
apps/web/src/components/ui/: Badge.tsx  (+3 more)
apps/web/src/hooks/: use-api.ts  use-audio-player.ts  use-queue-sse.ts  use-spotify-sdk.ts
apps/web/src/lib/: api-client.ts
apps/web/src/stores/: library.store.ts  player.store.ts  queue.store.ts  taste.store.ts
apps/web/src/types/: spotify-sdk.d.ts
design/: crate-design-spec.md  crate-tokens.css
(+12 files in other folders)
